--- a/static/holi.css
+++ b/static/holi.css
@@ -6,6 +6,7 @@ html {
 
 header {
     background-color: rgb(54, 116, 167);
+    min-width: 360px;
 }
 
 #main {
@@ -29,7 +30,7 @@ body {
 h1 {
     color: rgb(255, 203, 58);
     font-family: sans-serif;
-    font-size: 6rem;
+    font-size: 3rem;
     text-shadow: rgb(100, 100, 100) 3px 3px 2px;
     padding-bottom: 1vh;
     position: relative;
