--- a/static/holi.css
+++ b/static/holi.css
@@ -30,7 +30,7 @@ body {
 h1 {
     color: rgb(255, 203, 58);
     font-family: sans-serif;
-    font-size: 3rem;
+    font-size: 4rem;
     text-shadow: rgb(100, 100, 100) 3px 3px 2px;
     padding-bottom: 1vh;
     position: relative;
@@ -129,4 +129,7 @@ h5 {
     .btn_div {
         margin-top: 1.5em;
     }
+
+    h1 {
+        font-size: 15vw;
 }
